<resources>
    <string name="app_name">tolmachev Social Network</string>

    <!--   region MainActivity  -->
    <string name="root_env_message">Обнаружен root. Ваши данные из приложения могут украсть.</string>
    <string name="debug_mode_message">Обнаружен debug mode. Ваши данные из приложения могут украсть.</string>
    <!--    endregion-->

    <!--   region Экран Логина    -->
    <string name="hello_message">Workplaces</string>
    <string name="hello_message_second">Найди своё место</string>
    <string name="button_login">Войти</string>
    <string name="button_register_by_mail">Регистрация по почте</string>
    <!--    endregion-->

    <!--    region Экран Sign In    -->
    <string name="login_screen_name">Вход</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="button_go_to_register">Перейти к регистрации</string>
    <string name="button_go_next">Далее</string>
    <string name="login_failed">Залогиниться не удалось!</string>
    <string name="invalid_email">Проверьте правильность e-mail</string>
    <string name="invalid_password">Пароль должен быть не короче 8 символов и должен содержать хотя бы одну цифру, большую и маленькую букву</string>
    <string name="action_sign_in_short">Вход</string>
    <!--    endregion-->

    <!--    region Экран Sign Up First    -->
    <string name="register_screen_name">Регистрация</string>
    <string name="nickname_hint">Никнейм</string>
    <string name="button_already_register">Уже зарегистрирован</string>
    <!--    endregion-->

    <!--   region Экран Sign Up Second    -->
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="date_of_birth_hint">Дата рождения (ГГГГ-ММ-ДД)</string>
    <string name="button_finish_register">Зарегистрироваться</string>
    <string name="invalid_nickname">Проверьте, что используются только латинские символы и цифры</string>
    <string name="invalid_name">Проверьте, что используются только латинские символы</string>
    <string name="invalid_surname">Проверьте, что используются только латинские символы</string>
    <string name="invalid_birthday">Некорректная дата рождения (ГГГГ-ММ-ДД)</string>
    <string name="data_time_formatter_pattern">yyyy-MM-dd</string>
    <string name="input_mask_date_pattern">[0000]{-}[00]{-}[00]</string>
    <!--    endregion-->

    <!--   region Экран Done    -->
    <string name="done_sign_message">Nice to meet you</string>
    <string name="done_sign_message_second">Теперь ты можешь смотреть\n и делать публикации</string>
    <string name="button_go_to_feed">Перейти к ленте</string>
    <!--    endregion-->

    <!--   region Экран Feed    -->
    <string name="feed_is_empty_message">Пустота</string>
    <string name="feed_is_empty_message_second">Вам нужны друзья,\n чтобы лента стала живой</string>
    <string name="button_find_friends">Найти друзей</string>
    <string name="button_deauthorization">Деавторизация</string>
    <string name="button_save">Сохранить</string>
    <string name="feed_header_toolbar">Популярное</string>
    <string name="feed_oops_message">Упс...</string>
    <string name="feed_oops_message_second">Что-то пошло не так</string>
    <string name="button_refresh">Обновить</string>
    <!--    endregion-->

    <!--   region Экран Profile    -->
    <string name="profile_screen_name">Профиль</string>
    <string name="profile_tab_name_posts">Посты</string>
    <string name="profile_tab_name_likes">Лайки</string>
    <string name="profile_tab_name_friends">Друзья</string>
    <string name="logout">Выйти</string>
    <string name="profile_mine_empty_message">Пустота</string>
    <string name="profile_mine_empty_message_second">Вы пока одиноки в сервисе,\n но это можно исправить</string>
    <!--    endregion-->

    <!--   region Bottom Menu    -->
    <string name="bottom_menu_home">Домой</string>
    <string name="bottom_menu_add">Добавить</string>
    <string name="bottom_menu_profile">Профиль</string>
    <!--    endregion-->


    <!--   region Экран Profile    -->
    <string name="profile_edit_screen_name">Редактирование профиля</string>
    <!--    endregion-->

</resources>
