<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        style="@style/Widget.MaterialComponents.Toolbar.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:navigationIcon="@drawable/icon_back_button"
        app:title="@string/login_screen_name"
        app:titleTextColor="?android:attr/textColorPrimary"
        app:titleTextAppearance="@style/TextAppearance.App.BodyL" />

    <EditText
        android:id="@+id/edit_text_email"
        style="@style/Widget.Workplaces.EditText"
        android:textAppearance="@style/TextAppearance.App.BodyS"
        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <EditText
        android:id="@+id/edit_text_password"
        style="@style/Widget.Workplaces.EditText"
        android:textAppearance="@style/TextAppearance.App.BodyS"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password_hint"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

    <Button
        android:id="@+id/button_go_to_register"
        style="@style/Widget.Workplaces.Button"
        android:layout_marginTop="140dp"
        android:text="@string/button_go_to_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/button_login"
        style="@style/Widget.Workplaces.SolidButton"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:enabled="false"
        android:text="@string/button_go_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_go_to_register" />


</androidx.constraintlayout.widget.ConstraintLayout>
