<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_mine_empty_message"
        style="@style/Widget.Workplaces.TextView"
        android:paddingTop="67dp"
        android:text="@string/profile_mine_empty_message"
        android:textAppearance="@style/TextAppearance.App.H1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />" />

    <TextView
        android:id="@+id/profile_mine_empty_message_second"
        style="@style/Widget.Workplaces.TextView"
        android:gravity="center"
        android:text="@string/profile_mine_empty_message_second"
        android:textAppearance="@style/TextAppearance.App.BodyL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_mine_empty_message" />

    <Button
        android:id="@+id/button_find_friends"
        style="@style/Widget.Workplaces.Button"
        android:layout_marginTop="8dp"
        android:text="@string/button_find_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_mine_empty_message_second" />


</androidx.constraintlayout.widget.ConstraintLayout>
