<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/image_welcome_illustration"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/hello_text_view"
        android:textAppearance="@style/TextAppearance.App.H1"
        style="@style/Widget.Workplaces.TextView"
        android:text="@string/hello_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_image" />

    <TextView
        android:id="@+id/secondary_hello_text_view"
        android:textAppearance="@style/TextAppearance.App.BodyL"
        style="@style/Widget.Workplaces.TextView"
        android:text="@string/hello_message_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/hello_text_view" />

    <Button
        android:id="@+id/button_login"
        android:text="@string/button_login"
        style="@style/Widget.Workplaces.SolidButton"
        android:layout_marginTop="88dp"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        app:layout_constraintTop_toBottomOf="@id/secondary_hello_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/button_register_by_mail"
        android:text="@string/button_register_by_mail"
        style="@style/Widget.Workplaces.Button"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>
