<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/oops_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_error"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/oops_text_view"
        android:textAppearance="@style/TextAppearance.App.H1"
        style="@style/Widget.Workplaces.TextView"
        android:text="@string/feed_oops_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oops_image" />

    <TextView
        android:id="@+id/secondary_oops_text_view"
        android:gravity="center"
        android:text="@string/feed_oops_message_second"
        android:textAppearance="@style/TextAppearance.App.BodyL"
        style="@style/Widget.Workplaces.TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oops_text_view" />

    <Button
        android:id="@+id/button_refresh"
        android:text="@string/button_refresh"
        style="@style/Widget.Workplaces.Button"
        app:layout_constraintTop_toBottomOf="@id/secondary_oops_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
